--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -58,5 +59,10 @@
             <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
         </dependency>
+          <dependency>
+    <groupId>nz.ac.waikato.cms.weka</groupId>
+    <artifactId>weka-dev</artifactId>
+    <version>3.9.3</version>
+</dependency>
   </dependencies>  
 </project>
